blog create and profile api integaration implemented

--- a/client/src/components/author/styles/Author.scss
+++ b/client/src/components/author/styles/Author.scss
@@ -1,17 +1,29 @@
 @use "../../../sass/abstract/" as *;
 
 .card {
-    width: 18% !important;
+    width: 25% !important;
     border: none !important;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     background-color: white;
     border-radius: 10px;
     cursor: pointer;
-    padding: 0px 10px !important;
-    height: 200px !important;
+    padding: 10px 10px !important;
+    height: auto !important;
     display: flex;
-    align-items: center;
-    justify-content: center;
+
     flex-direction: column;
-    text-align: center;
+}
+
+.activecard {
+    width: 25% !important;
+    border: none !important;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    background-color: #ffdab4;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 10px 10px !important;
+    height: auto !important;
+    display: flex;
+
+    flex-direction: column;
 }
