--- a/client/src/components/dashboard/styles/Dasboard.scss
+++ b/client/src/components/dashboard/styles/Dasboard.scss
@@ -1,7 +1,7 @@
 @use "../../../sass/abstract/" as *;
 
 .cards {
-    width: 18% !important;
+    width: 28% !important;
     border: none !important;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     background-color: white;
@@ -10,8 +10,24 @@
     padding: 20px 10px !important;
     height: auto !important;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    // align-items: center;
+    // justify-content: center;
     flex-direction: column;
-    text-align: center;
+    // text-align: center;
+}
+
+.dashobard-images {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+.type-btn {
+    background-color: cyan;
+    width: 120px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 10px 0px;
 }
