--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,20 +13,17 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  object-fit: contain;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.dashobard-image
-{
+.dashobard-image {
   width: 100%;
   height: 100%;
   border-radius: 20px;
   object-fit: contain;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
