--- a/client/src/components/dashboard/styles/Dasboard.scss
+++ b/client/src/components/dashboard/styles/Dasboard.scss
@@ -1,7 +1,7 @@
 @use "../../../sass/abstract/" as *;
 
 .cards {
-    width: 28% !important;
+    width: 32.1% !important;
     border: none !important;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     background-color: white;
@@ -17,9 +17,10 @@
 }
 
 .dashobard-images {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 10%;
 }
 
 .type-btn {
