--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,19 +10,20 @@
 }
 
 .userimage {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  object-fit: cover;
 }
 
 .dashobard-image {
   width: 100%;
-  height: 100%;
+  height: 250px;
   border-radius: 20px;
-  object-fit: contain;
+  object-fit: cover;
   display: flex;
   align-items: center;
   justify-content: center;
