--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,10 +20,11 @@
 }
 
 .dashobard-image {
-  width: 100%;
-  height: 250px;
+  width: 94%;
+  height: 180px;
+  margin: 0 auto;
   border-radius: 20px;
-  object-fit: cover;
+  object-fit: contain;
   display: flex;
   align-items: center;
   justify-content: center;
