like and unlike and post command bug fixing

--- a/client/src/components/dashboard/styles/Dasboard.scss
+++ b/client/src/components/dashboard/styles/Dasboard.scss
@@ -32,3 +32,9 @@
     border-radius: 10px;
     padding: 10px 20px;
 }
+
+.unlike-heart {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
