--- a/client/src/router/styles/Layout.scss
+++ b/client/src/router/styles/Layout.scss
@@ -4,6 +4,8 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    background: #f1eaff;
+
     .inside-layout-section {
         width: 100%;
         height: 100%;
