--- a/client/src/components/header/styles/Header.scss
+++ b/client/src/components/header/styles/Header.scss
@@ -6,3 +6,22 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px !important;
     background-color: white;
 }
+
+.cart-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ion-icon {
+    font-size: 22px; //Preferred size here
+    cursor: pointer;
+}
+.count-cart {
+    width: 15px;
+    text-align: center;
+    border-radius: 50%;
+}
