--- a/client/src/components/ecommercecomponent/cart/Cart.scss
+++ b/client/src/components/ecommercecomponent/cart/Cart.scss
@@ -111,3 +111,13 @@
     background-color: #faf3f0;
     border-radius: 20px;
 }
+
+.address-btn {
+    width: 100%;
+    padding: 5px 20px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background-color: #e93b81;
+    color: white;
+}
