--- a/client/src/components/ecommercecomponent/products/styles/Products.scss
+++ b/client/src/components/ecommercecomponent/products/styles/Products.scss
@@ -169,3 +169,11 @@ footer {
         margin-right: auto;
     }
 }
+
+
+.image-product
+{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
