--- a/client/src/components/ecommercecomponent/cart/Cart.scss
+++ b/client/src/components/ecommercecomponent/cart/Cart.scss
@@ -103,13 +103,13 @@
 }
 
 .product-image {
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     object-fit: contain;
     cursor: pointer;
-    padding: 30px 10px;
     background-color: #faf3f0;
     border-radius: 20px;
+    padding:10px;
 }
 
 .address-btn {
