--- a/client/src/components/ecommercecomponent/products/styles/Products.scss
+++ b/client/src/components/ecommercecomponent/products/styles/Products.scss
@@ -52,7 +52,13 @@ a {
     padding: 10px 20px;
     border-radius: 20px;
     cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    // box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    // height:500px;
+    .image-card-style
+    {
+        width: 100%;
+        height: 180px;
+    }
 }
 .bd-grid {
     display: grid;
@@ -177,7 +183,7 @@ footer {
 {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: flex;
     align-items: center;
     justify-content: center;
