--- a/client/src/components/ecommercecomponent/products/styles/Productview.scss
+++ b/client/src/components/ecommercecomponent/products/styles/Productview.scss
@@ -2,15 +2,16 @@
 
 .main-view-product {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     overflow-y: auto;
     .inside-view {
         width: 95%;
-        height: 100%;
+        height: auto;
         margin: 0 auto;
         display: flex;
         gap: 10px;
+        border: 1px solid red;
         .left-view {
             width: 60%;
             .left-inaide-view {
@@ -26,8 +27,7 @@
                         gap: 20px;
                     }
                     .image-left-height {
-                        height: 700px;
-                        border: 3px solid orange;
+                        height: 100%;
                         overflow: hidden;
                         overflow-y: auto;
                         flex-direction: column;
@@ -36,7 +36,6 @@
                     }
                     .image-card-lefts {
                         width: 100%;
-                        border: 1px solid red;
                         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
                         background-color: white;
                         border-radius: 10px;
@@ -45,12 +44,17 @@
                     }
                     .active-card {
                         width: 100%;
-                        border: 1px solid blue;
                         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
                         background-color: white;
                         border-radius: 10px;
                         cursor: pointer;
                         padding: 10px;
+                        border: 2px solid orangered;
+                    }
+                    .active-imagecard {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
                     }
                 }
                 .left-inside-right {
@@ -58,6 +62,16 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    height: 100%;
+                    margin: 0 auto;
+                    .right-image-product {
+                        width: 100%;
+                        height: auto;
+                        object-fit: fill;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
                 }
             }
         }
