--- a/client/src/components/ecommercecomponent/products/styles/Productview.scss
+++ b/client/src/components/ecommercecomponent/products/styles/Productview.scss
@@ -21,10 +21,14 @@
                 gap: 10px;
                 .left-inside-left {
                     width: 20%;
+                    height: 100%;
                     .image-left-cards {
                         display: flex;
                         flex-direction: column;
                         gap: 20px;
+                        border: 2px solid blue;
+                        height: 600px;
+                        overflow: hidden;
                     }
                     .image-left-height {
                         height: 100%;
@@ -33,14 +37,18 @@
                         flex-direction: column;
                         gap: 20px;
                         padding: 10px;
+                        align-items: center;
+                        justify-content: center;
+                        margin: 0 auto;
                     }
                     .image-card-lefts {
-                        width: 100%;
+                        width: 120px;
                         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
                         background-color: white;
                         border-radius: 10px;
                         cursor: pointer;
                         padding: 10px;
+                        height: 70px;
                     }
                     .active-card {
                         width: 100%;
@@ -50,6 +58,7 @@
                         cursor: pointer;
                         padding: 10px;
                         border: 2px solid orangered;
+                        height: 70px;
                     }
                     .active-imagecard {
                         width: 100%;
@@ -59,19 +68,18 @@
                 }
                 .left-inside-right {
                     width: 80%;
+                    height: 600px;
+                    margin: 0 auto;
+                    padding: 20px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    height: 100%;
-                    margin: 0 auto;
-                    .right-image-product {
-                        width: 100%;
-                        height: auto;
-                        object-fit: fill;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
+                    background-color: #f9f5f6;
+                }
+                .right-image-product {
+                    width: 100%;
+                    height: 520px;
+                    object-fit: contain;
                 }
             }
         }
