new code push logics

--- a/client/src/components/learningpart/Learnig.scss
+++ b/client/src/components/learningpart/Learnig.scss
@@ -1,12 +1,9 @@
 @use "../../sass/abstract/" as *;
 
-
-.cardinactive
-{
+.cardinactive {
     border: 1px solid blue;
 }
 
-.cardactive
-{
+.cardactive {
     border: 1px solid green;
 }
