--- a/client/src/components/ecommercecomponent/products/styles/Productview.scss
+++ b/client/src/components/ecommercecomponent/products/styles/Productview.scss
@@ -10,8 +10,7 @@
         height: auto;
         margin: 0 auto;
         display: flex;
-        gap: 10px;
-        border: 1px solid red;
+        gap: 3%;
         .left-view {
             width: 60%;
             .left-inaide-view {
@@ -26,7 +25,6 @@
                         display: flex;
                         flex-direction: column;
                         gap: 20px;
-                        border: 2px solid blue;
                         height: 600px;
                         overflow: hidden;
                     }
@@ -57,8 +55,8 @@
                         border-radius: 10px;
                         cursor: pointer;
                         padding: 10px;
-                        border: 2px solid orangered;
                         height: 70px;
+                        border: 3px solid #dc84f3;
                     }
                     .active-imagecard {
                         width: 100%;
@@ -74,7 +72,8 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    background-color: #f9f5f6;
+                    background-color: white;
+                    border-radius: 20px;
                 }
                 .right-image-product {
                     width: 100%;
