--- a/client/src/components/header/styles/Header.scss
+++ b/client/src/components/header/styles/Header.scss
@@ -5,6 +5,7 @@
     background-color: white !important;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px !important;
     background-color: white;
+    z-index: 98 !important;
 }
 
 .cart-image {
