new code push in logics

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,7 @@
 @use "sass" as *;
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 .warning-image-box {
     width: 100px;
     height: 100px;
